# tensor-cpp

./: .clang-format  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md
libs/: CMakeLists.txt
libs/tensor/: CMakeLists.txt
libs/tensor/inc/: tensor.hpp
libs/tensor/src/: tensor.cpp
libs/tensor_ops/: CMakeLists.txt
libs/tensor_ops/inc/: tensor_ops.hpp
libs/tensor_ops/src/: tensor_ops.cpp
test/: CMakeLists.txt  test.cpp
